Fix: for links overflowing
closes https://github.com/catppuccin/youtube/issues/61

--- a/src/catppuccin.user.css
+++ b/src/catppuccin.user.css
@@ -387,7 +387,7 @@
       --yt-button-dark-background-color: @accent-colour !important;
       --yt-button-payment-background-color: @accent-colour ! important;
     }
-    
+
     yt-icon.ytd-pinned-comment-badge-renderer * {
       fill: @text !important;
     }
@@ -508,7 +508,7 @@
     .sbfl_a {
       color: @subtext0 !important;
     }
-    
+
     .sbsb_i {
       color: @subtext0;
     }
@@ -611,11 +611,12 @@
       background-color: @base !important;
     }
 
+    /* Temporary fix */
     .yt-core-attributed-string--link-inherit-color {
-      color: @sapphire !important;
-      &:hover {
-        color: @teal !important;
-      }
+      color: @text !important;
+      /*&:hover {
+       * color: @teal !important;
+      }*/
     }
 
     /* live badges */
